--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "test": "jshint . && jscs ."
+    "test": "grunt test"
   },
   "devDependencies": {
-    "jscs": "1.13.1",
-    "jshint": "2.8.0"
+    "grunt": "0.4.5",
+    "grunt-banana-checker": "0.2.2",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-jscs": "1.8.0",
+    "grunt-jsonlint": "1.0.4"
   }
 }
