build: Updating eslint-config-wikimedia to 0.29.1
The following rules are failing and were disabled:
* prefer-const
* no-jquery/no-done-fail

Additional changes:
* eslint: Replaced `wikimedia/client-es5` with `wikimedia/client`.

Change-Id: I9ac883deda660c9f354ff290c7517076b56779c5

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -12,6 +12,8 @@
 		"no-jquery/no-global-selector": "warn",
 		"no-jquery/no-trim": "warn",
 		"no-jquery/no-parse-html-literal": "warn",
-		"no-jquery/no-sizzle": "off"
+		"no-jquery/no-sizzle": "off",
+		"prefer-const": "warn",
+		"no-jquery/no-done-fail": "warn"
 	}
 }
